--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
       </a>
        <a href="lab6/index.html" class="card">
         <h3>Lab 6</h3>
-        <p>Estilos e layout responsivo</p>
+        <p>Loja</p>
+        </a>
+        <a href="lab7/index.html" class="card">
+        <h3>Lab 7</h3>
+        <p>Loja 2.0</p>
         </a>
     </div>
   </section>
